frame/support/test/tests/pallet_ui/step_007.stderr
error: Invalid pallet::trait, expect explicit `frame_system::Config` as supertrait, found none. To disable this check, use `#[pallet::disable_frame_system_supertrait_check]`
 --> $DIR/step_007.rs:4:2
  |
4 |     pub trait Config {}
  |     ^^^
